force-app/main/default/objects/ApprovalRouteStep__mdt/ApprovalRouteStep__mdt.object-meta.xml
<CustomObject>
    <description>申請カテゴリごとの承認順序と承認者決定方法を管理する。</description>
    <label>承認ルートステップ</label>
    <pluralLabel>承認ルートステップ</pluralLabel>
</CustomObject>