force-app/main/default/objects/ApprovalRouteStep__mdt/fields/ApplicationCategory__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCategory__c</fullName>
    <label>申請カテゴリ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>