force-app/main/default/objects/ApprovalRouteStep__mdt/fields/ApproverLabel__c.field-meta.xml
<CustomField>
    <fullName>ApproverLabel__c</fullName>
    <label>承認者表示名</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>