force-app/main/default/objects/ApprovalRouteStep__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>