force-app/main/default/objects/ApprovalRouteStep__mdt/fields/ResolverKey__c.field-meta.xml
<CustomField>
    <fullName>ResolverKey__c</fullName>
    <label>承認者解決キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>