force-app/main/default/objects/ApprovalRouteStep__mdt/fields/ResolverType__c.field-meta.xml
<CustomField>
    <fullName>ResolverType__c</fullName>
    <label>承認者決定方法</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRANCH_MANAGER</fullName>
                <label>申請者所属支店長</label>
            </value>
            <value>
                <fullName>FIXED_USER_KEY</fullName>
                <label>固定承認者キー</label>
            </value>
            <value>
                <fullName>SELECT_BY_TITLE</fullName>
                <label>役職候補から選択</label>
            </value>
            <value>
                <fullName>SELECT_USER</fullName>
                <label>申請時ユーザー選択</label>
            </value>
            <value>
                <fullName>QUEUE</fullName>
                <label>キュー</label>
            </value>
            <value>
                <fullName>PUBLIC_GROUP</fullName>
                <label>公開グループ</label>
            </value>
            <value>
                <fullName>DEPARTMENT</fullName>
                <label>部署担当者</label>
            </value>
            <value>
                <fullName>UNCONFIRMED</fullName>
                <label>未確定</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>