force-app/main/default/objects/ApprovalRouteStep__mdt/fields/RouteCode__c.field-meta.xml
<CustomField>
    <fullName>RouteCode__c</fullName>
    <label>ルートコード</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>